Fix whitespace bug

--- a/client/src/app/footer/footer.component.css
+++ b/client/src/app/footer/footer.component.css
@@ -1,10 +1,11 @@
 footer {
     padding: .5em;
-    width: 99%;
+    width: 100%;
     border-top: 1px solid black;
     bottom: 0;
     height: 50px;
     justify-content: start;
     position: absolute;
     text-align: center;
+    box-sizing: border-box;
 }
