--- a/client/src/app/header/header.component.css
+++ b/client/src/app/header/header.component.css
@@ -1,6 +1,6 @@
 h1 {
     font-size: 4em;
-    color: #00A6A6;
+    color: #F08700;
 }
 
 img {
