--- a/client/src/app/nav/nav.component.css
+++ b/client/src/app/nav/nav.component.css
@@ -3,10 +3,11 @@ nav {
     grid-template-columns: repeat(3, 1fr);
     background-color: #F49F0A;
     padding: .5em;
-    width: 99%;
+    width: 100%;
     border: 1px solid black;
     height: 50px;
     text-align: center;
+    box-sizing: border-box;
 }
 section {
     display: grid;
